--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,12 @@ td { vertical-align: top; }
 	margin: 10px;
 }
 
+canvas {
+border: 1px solid #999999 ;
+-webkit-touch-callout: none ;
+-webkit-user-select: none ;
+}
+
 
 
 
